Layout fixed. Sticky footer added. Scrollbar style changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+body{
+	height: 100vh;
+}
+
+.navbar{
+	height: 8%;
+}
+
+.navbar-logo{
+	height: inherit;
+}
+
 .modal-body{
 	display: flex;
 	justify-content: center;
@@ -7,6 +19,31 @@
 #anysearch-slidebox{
 	display: none !important;
 }
+
 .container{
-	min-height: 100vh;
+	height: 87%;
+	overflow: auto;
+}
+
+.footer{
+	height: 5%;
+	background-color: #132347;
+	color: white;
+}
+
+.container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.container::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.container::-webkit-scrollbar-thumb
+{
+	background-color: #132347;
 }
